# virtual-minds-testtask

./: CMakeLists.txt  Makefile  README.md  adproxy.dockerfile  adproxy.py  adserver.cpp  adserver.dockerfile  adserver.py  daemon.dockerfile  daemon.py  database.dockerfile  database.py  find_farms.sh
farm_1/: adserver-config.conf  kustomization.yaml
farm_2/: adserver-config.conf  kustomization.yaml
farm_base/: access.yaml  adproxy-deployment.yaml  adserver-config.conf  adserver-deployment.yaml  daemon-deployment.yaml  database-deployment.yaml  geodata-pv.yaml  kustomization.yaml  namespace.yaml
geodata/: geodata.txt  plz.txt
